MANVIR SANDBOX/src/objects/XACT_connect_info__c.object
<CustomObject>
    <fields>
        <fullName>XConnect_Address__c</fullName>
        <label>XConnect_Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>XConnect_Hostname__c</fullName>
        <label>XConnect_Hostname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>XConnect_Port__c</fullName>
        <label>XConnect_Port</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>XactlyConnectInfo</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>XACT_ ConnectInfoName</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>XactlyConnectInfo</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>